--- a/pom.xml
+++ b/pom.xml
@@ -95,13 +95,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://http://18.224.3.31:8081/repository/tesla1-release/</url>
+	      <url>http://18.224.3.31:8081/repository/tesla3/</url>
 	    </repository>  
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://18.224.3.31:8081/repository/tesla2-snapshot/</url>
+	      <url>http://18.224.3.31:8081/repository/tesla3a/</url>
 	    </snapshotRepository>  
 	    
 	</distributionManagement>
